--- a/tools/chmmaker/chmmain.lfm
+++ b/tools/chmmaker/chmmain.lfm
@@ -1,45 +1,50 @@
 object CHMForm: TCHMForm
   Left = 368
-  Height = 639
+  Height = 447
   Top = 154
-  Width = 764
-  HorzScrollBar.Page = 741
-  VertScrollBar.Page = 534
+  Width = 583
+  HorzScrollBar.Page = 582
+  VertScrollBar.Page = 399
   ActiveControl = FileListBox
   AutoScroll = True
   Caption = 'Compiled HTML Help Project - [Made with Freepascal]'
-  ClientHeight = 639
-  ClientWidth = 764
-  DesignTimePPI = 120
+  ClientHeight = 447
+  ClientWidth = 583
   Menu = MainMenu1
+  ShowInTaskBar = stAlways
+  LCLVersion = '4.99.0.0'
+  OnActivate = FormActivate
   OnClose = FormClose
   OnCreate = FormCreate
   OnDestroy = FormDestroy
-  ShowInTaskBar = stAlways
-  LCLVersion = '3.2.0.0'
   object StatusBar1: TStatusBar
     Left = 0
-    Height = 29
-    Top = 610
-    Width = 764
+    Height = 23
+    Top = 424
+    Width = 583
     Panels = <>
   end
   object GroupBox1: TGroupBox
-    Left = 0
-    Height = 610
-    Top = 0
-    Width = 335
+    Left = 8
+    Height = 408
+    Top = 8
+    Width = 228
     Align = alLeft
+    BorderSpacing.Left = 8
+    BorderSpacing.Top = 8
+    BorderSpacing.Right = 4
+    BorderSpacing.Bottom = 8
     Caption = 'Files'
-    ClientHeight = 585
-    ClientWidth = 331
+    ClientHeight = 388
+    ClientWidth = 224
     TabOrder = 0
     object FileListBox: TListBox
-      Left = 0
-      Height = 417
-      Top = 0
-      Width = 331
+      Left = 8
+      Height = 238
+      Top = 8
+      Width = 208
       Align = alClient
+      BorderSpacing.Around = 8
       ItemHeight = 0
       ScrollWidth = 262
       Sorted = True
@@ -49,153 +54,216 @@ object CHMForm: TCHMForm
     end
     object Panel2: TPanel
       Left = 0
-      Height = 168
-      Top = 417
-      Width = 331
+      Height = 134
+      Top = 254
+      Width = 224
       Align = alBottom
-      ClientHeight = 168
-      ClientWidth = 331
+      BevelOuter = bvNone
+      ClientHeight = 134
+      ClientWidth = 224
       TabOrder = 1
       object FilesNoteLabel: TLabel
-        Left = 20
-        Height = 60
-        Top = 107
-        Width = 291
-        Align = alBottom
-        AutoSize = False
-        BorderSpacing.Left = 19
-        BorderSpacing.Right = 19
+        AnchorSideLeft.Control = Panel2
+        AnchorSideTop.Control = AutoAddLinksBtn
+        AnchorSideTop.Side = asrBottom
+        AnchorSideRight.Control = Panel2
+        AnchorSideRight.Side = asrBottom
+        Left = 6
+        Height = 29
+        Top = 99
+        Width = 212
+        Anchors = [akTop, akLeft, akRight, akBottom]
+        BorderSpacing.Around = 6
         Caption = 'All files must be in the project file directory or a subdirectory.'
         ParentColor = False
         WordWrap = True
       end
       object AddFilesBtn: TButton
-        Left = 14
-        Height = 31
-        Top = 4
-        Width = 101
-        BorderSpacing.InnerBorder = 5
+        AnchorSideLeft.Control = Panel2
+        AnchorSideTop.Control = Panel2
+        AnchorSideRight.Control = Bevel1
+        Left = 6
+        Height = 25
+        Top = 6
+        Width = 80
+        Anchors = [akTop, akLeft, akRight]
+        AutoSize = True
+        BorderSpacing.Left = 6
+        BorderSpacing.Top = 6
+        BorderSpacing.Bottom = 6
         Caption = 'Add Files'
         TabOrder = 0
         OnClick = AddFilesBtnClick
       end
       object RemoveFilesBtn: TButton
-        Left = 118
-        Height = 31
-        Top = 4
-        Width = 195
-        BorderSpacing.InnerBorder = 5
+        AnchorSideLeft.Control = Bevel1
+        AnchorSideLeft.Side = asrBottom
+        AnchorSideTop.Control = Panel2
+        AnchorSideRight.Control = Panel2
+        AnchorSideRight.Side = asrBottom
+        Left = 93
+        Height = 25
+        Top = 6
+        Width = 125
+        Anchors = [akTop, akLeft, akRight]
+        AutoSize = True
+        BorderSpacing.Top = 6
+        BorderSpacing.Right = 6
+        BorderSpacing.Bottom = 6
         Caption = 'Remove Selected'
         TabOrder = 1
         OnClick = RemoveFilesBtnClick
       end
       object AutoAddLinksBtn: TButton
-        Left = 14
-        Height = 31
-        Top = 74
-        Width = 299
-        BorderSpacing.InnerBorder = 5
+        AnchorSideLeft.Control = Panel2
+        AnchorSideTop.Control = AddAllBtn
+        AnchorSideTop.Side = asrBottom
+        AnchorSideRight.Control = Panel2
+        AnchorSideRight.Side = asrBottom
+        Left = 6
+        Height = 25
+        Top = 68
+        Width = 212
+        Anchors = [akTop, akLeft, akRight]
+        AutoSize = True
+        BorderSpacing.Around = 6
         Caption = 'Auto add HREF files'
         Enabled = False
         TabOrder = 3
         OnClick = AutoAddLinksBtnClick
       end
       object AddAllBtn: TButton
-        Left = 14
-        Height = 31
-        Top = 40
-        Width = 299
-        BorderSpacing.InnerBorder = 5
+        AnchorSideLeft.Control = Panel2
+        AnchorSideTop.Control = AddFilesBtn
+        AnchorSideTop.Side = asrBottom
+        AnchorSideRight.Control = Panel2
+        AnchorSideRight.Side = asrBottom
+        Left = 6
+        Height = 25
+        Top = 37
+        Width = 212
+        Anchors = [akTop, akLeft, akRight]
+        AutoSize = True
+        BorderSpacing.Around = 6
         Caption = 'Add all files in Project Directory'
         TabOrder = 2
         OnClick = AddAllBtnClick
       end
+      object Bevel1: TBevel
+        Left = 86
+        Height = 25
+        Top = 8
+        Width = 7
+        Anchors = [akTop]
+        Shape = bsSpacer
+      end
     end
   end
   object MainPanel: TPanel
-    Left = 335
-    Height = 610
-    Top = 0
-    Width = 429
+    Left = 249
+    Height = 408
+    Top = 8
+    Width = 326
     Align = alClient
-    ClientHeight = 610
-    ClientWidth = 429
-    TabOrder = 1
+    BorderSpacing.Left = 4
+    BorderSpacing.Top = 8
+    BorderSpacing.Right = 8
+    BorderSpacing.Bottom = 8
+    BevelOuter = bvNone
+    ClientHeight = 408
+    ClientWidth = 326
+    TabOrder = 2
     object TableOfContentsLabel: TLabel
-      Left = 10
-      Height = 20
-      Top = 80
-      Width = 161
+      AnchorSideLeft.Control = MainPanel
+      AnchorSideTop.Control = ChmTitleEdit
+      AnchorSideTop.Side = asrBottom
+      Left = 0
+      Height = 15
+      Top = 54
+      Width = 132
+      BorderSpacing.Top = 12
       Caption = 'Table of Contents (*.hhc)'
       ParentColor = False
     end
     object IndexLabel: TLabel
-      Left = 10
-      Height = 20
-      Top = 140
-      Width = 82
+      AnchorSideLeft.Control = MainPanel
+      AnchorSideTop.Control = TOCEdit
+      AnchorSideTop.Side = asrBottom
+      Left = 0
+      Height = 15
+      Top = 108
+      Width = 67
+      BorderSpacing.Top = 12
       Caption = 'Index (*.hhk)'
       ParentColor = False
     end
-    object CompileTimeOptionsLabel: TLabel
-      Left = 14
-      Height = 20
-      Top = 274
-      Width = 147
-      Caption = 'Compile time options:'
-      ParentColor = False
-    end
     object DefaultPageLabel: TLabel
-      Left = 10
-      Height = 20
-      Top = 201
-      Width = 85
+      AnchorSideLeft.Control = MainPanel
+      AnchorSideTop.Control = IndexEdit
+      AnchorSideTop.Side = asrBottom
+      Left = 0
+      Height = 15
+      Top = 162
+      Width = 67
+      BorderSpacing.Top = 12
       Caption = 'Default Page'
       ParentColor = False
     end
     object CHMFilenameLabel: TLabel
-      Left = 15
-      Height = 20
-      Top = 445
-      Width = 95
+      AnchorSideLeft.Control = MainPanel
+      AnchorSideTop.Control = CompileTimeOptionsGroupbox
+      AnchorSideTop.Side = asrBottom
+      Left = 0
+      Height = 15
+      Top = 318
+      Width = 77
+      BorderSpacing.Top = 24
       Caption = 'CHM filename'
       ParentColor = False
     end
     object TOCEdit: TFileNameEdit
+      AnchorSideLeft.Control = MainPanel
+      AnchorSideTop.Control = TableOfContentsLabel
+      AnchorSideTop.Side = asrBottom
       AnchorSideRight.Control = TOCEditBtn
-      Left = 8
-      Height = 29
-      Top = 105
-      Width = 299
+      Left = 0
+      Height = 23
+      Top = 73
+      Width = 250
       OnAcceptFileName = TOCEditAcceptFileName
       DialogOptions = []
       Filter = 'Table of Contents Files(*.hhc)|*.hhc|All files|*'
       FilterIndex = 0
       HideDirectories = False
-      ButtonWidth = 29
+      ButtonWidth = 23
       NumGlyphs = 1
       Anchors = [akTop, akLeft, akRight]
       AutoSelect = False
+      BorderSpacing.Top = 4
       AutoSize = False
       MaxLength = 0
       TabOrder = 1
       OnEditingDone = TOCEditEditingDone
     end
     object IndexEdit: TFileNameEdit
+      AnchorSideLeft.Control = MainPanel
+      AnchorSideTop.Control = IndexLabel
+      AnchorSideTop.Side = asrBottom
       AnchorSideRight.Control = IndexEditBtn
-      Left = 8
-      Height = 29
-      Top = 165
-      Width = 299
+      Left = 0
+      Height = 23
+      Top = 127
+      Width = 250
       OnAcceptFileName = IndexEditAcceptFileName
       DialogOptions = []
       Filter = 'Index Files(*.hhk)|*.hhk|All Files|*'
       FilterIndex = 0
       HideDirectories = False
-      ButtonWidth = 29
+      ButtonWidth = 23
       NumGlyphs = 1
       Anchors = [akTop, akLeft, akRight]
       AutoSelect = False
+      BorderSpacing.Top = 4
       AutoSize = False
       MaxLength = 0
       TabOrder = 3
@@ -203,103 +271,100 @@ object CHMForm: TCHMForm
     end
     object TOCEditBtn: TButton
       AnchorSideTop.Control = TOCEdit
+      AnchorSideTop.Side = asrCenter
       AnchorSideRight.Control = MainPanel
       AnchorSideRight.Side = asrBottom
-      Left = 345
-      Height = 30
-      Top = 105
-      Width = 75
+      Left = 266
+      Height = 25
+      Top = 72
+      Width = 60
       Anchors = [akTop, akRight]
       AutoSize = True
-      BorderSpacing.Left = 38
-      BorderSpacing.Right = 8
+      BorderSpacing.Left = 16
       Caption = 'Edit'
-      Constraints.MinWidth = 75
+      Constraints.MinWidth = 60
       TabOrder = 2
       OnClick = TOCEditBtnClick
     end
     object IndexEditBtn: TButton
       AnchorSideTop.Control = IndexEdit
+      AnchorSideTop.Side = asrCenter
       AnchorSideRight.Control = MainPanel
       AnchorSideRight.Side = asrBottom
-      Left = 345
-      Height = 30
-      Top = 165
-      Width = 75
+      Left = 266
+      Height = 25
+      Top = 126
+      Width = 60
       Anchors = [akTop, akRight]
       AutoSize = True
-      BorderSpacing.Left = 38
-      BorderSpacing.Right = 8
+      BorderSpacing.Left = 16
       Caption = 'Edit'
-      Constraints.MinWidth = 75
+      Constraints.MinWidth = 60
       TabOrder = 4
       OnClick = IndexEditBtnClick
     end
-    object ScanHtmlCheck: TCheckBox
-      Left = 24
-      Height = 24
-      Top = 315
-      Width = 381
-      Caption = 'Parse *.htm* files to include '#10'linked pages and images'
-      TabOrder = 6
-      OnClick = ScanHtmlCheckClick
-    end
-    object CreateSearchableCHMCheck: TCheckBox
-      Left = 24
-      Height = 24
-      Hint = 'Only indexes files added to the project'#10'not files automatically added.'
-      Top = 380
-      Width = 183
-      Caption = 'Create a searchable chm'
-      ParentShowHint = False
-      ShowHint = True
-      TabOrder = 7
-    end
     object DefaultPageCombo: TComboBox
-      Left = 10
-      Height = 28
-      Top = 226
-      Width = 363
+      AnchorSideLeft.Control = MainPanel
+      AnchorSideTop.Control = DefaultPageLabel
+      AnchorSideTop.Side = asrBottom
+      AnchorSideRight.Control = MainPanel
+      AnchorSideRight.Side = asrBottom
+      Left = 0
+      Height = 23
+      Top = 181
+      Width = 326
+      Anchors = [akTop, akLeft, akRight]
       AutoSelect = False
-      ItemHeight = 20
+      BorderSpacing.Top = 4
+      ItemHeight = 15
       Style = csDropDownList
       TabOrder = 5
     end
     object CompileBtn: TButton
       AnchorSideLeft.Side = asrBottom
       AnchorSideRight.Control = CompileViewBtn
-      Left = 120
-      Height = 40
-      Top = 552
-      Width = 92
+      AnchorSideBottom.Control = MainPanel
+      AnchorSideBottom.Side = asrBottom
+      Left = 109
+      Height = 33
+      Top = 375
+      Width = 79
       Anchors = [akRight, akBottom]
       AutoSize = True
-      BorderSpacing.Right = 11
-      BorderSpacing.InnerBorder = 5
+      BorderSpacing.Top = 16
+      BorderSpacing.Right = 8
+      BorderSpacing.InnerBorder = 4
       Caption = 'Compile'
-      TabOrder = 9
+      TabOrder = 8
       OnClick = CompileBtnClick
     end
     object CompileViewBtn: TButton
-      AnchorSideLeft.Control = CompileBtn
       AnchorSideLeft.Side = asrBottom
-      Left = 223
-      Height = 40
-      Top = 552
-      Width = 157
+      AnchorSideRight.Control = MainPanel
+      AnchorSideRight.Side = asrBottom
+      AnchorSideBottom.Control = MainPanel
+      AnchorSideBottom.Side = asrBottom
+      Left = 196
+      Height = 33
+      Top = 375
+      Width = 130
       Anchors = [akRight, akBottom]
       AutoSize = True
-      BorderSpacing.Right = 16
-      BorderSpacing.InnerBorder = 5
+      BorderSpacing.InnerBorder = 4
       Caption = 'Compile and View'
-      TabOrder = 10
+      TabOrder = 9
       OnClick = CompileViewBtnClick
     end
     object ChmFileNameEdit: TFileNameEdit
-      Left = 14
-      Height = 29
-      Top = 475
-      Width = 338
+      AnchorSideLeft.Control = MainPanel
+      AnchorSideTop.Control = CHMFilenameLabel
+      AnchorSideTop.Side = asrBottom
+      AnchorSideRight.Control = MainPanel
+      AnchorSideRight.Side = asrBottom
+      Left = 0
+      Height = 23
+      Top = 337
+      Width = 326
       OnAcceptFileName = ChmFileNameEditAcceptFileName
       DialogKind = dkSave
       DialogTitle = 'Save CHM as...'
@@ -307,47 +372,110 @@ object CHMForm: TCHMForm
       Filter = 'Compressed HTML Help Files|*.chm'
       FilterIndex = 0
       HideDirectories = False
-      ButtonWidth = 29
+      ButtonWidth = 23
       NumGlyphs = 1
+      Anchors = [akTop, akLeft, akRight]
       AutoSelect = False
+      BorderSpacing.Top = 4
       AutoSize = False
       MaxLength = 0
-      TabOrder = 8
+      TabOrder = 7
       OnEditingDone = ChmFileNameEditEditingDone
     end
     object ChmTitleLabel: TLabel
-      Left = 10
-      Height = 20
-      Top = 23
-      Width = 66
+      AnchorSideLeft.Control = MainPanel
+      AnchorSideTop.Control = MainPanel
+      Left = 0
+      Height = 15
+      Top = 0
+      Width = 54
       Caption = 'CHM Title'
       ParentColor = False
     end
     object ChmTitleEdit: TEdit
-      Left = 11
-      Height = 28
-      Top = 48
-      Width = 308
+      AnchorSideLeft.Control = MainPanel
+      AnchorSideTop.Control = ChmTitleLabel
+      AnchorSideTop.Side = asrBottom
+      AnchorSideRight.Control = MainPanel
+      AnchorSideRight.Side = asrBottom
+      Left = 0
+      Height = 23
+      Top = 19
+      Width = 326
+      Anchors = [akTop, akLeft, akRight]
+      BorderSpacing.Top = 4
       TabOrder = 0
       OnChange = ChmTitleEditChange
     end
+    object CompileTimeOptionsGroupbox: TGroupBox
+      AnchorSideLeft.Control = MainPanel
+      AnchorSideTop.Control = DefaultPageCombo
+      AnchorSideTop.Side = asrBottom
+      AnchorSideRight.Control = MainPanel
+      AnchorSideRight.Side = asrBottom
+      Left = 0
+      Height = 66
+      Top = 228
+      Width = 325
+      AutoSize = True
+      BorderSpacing.Top = 24
+      Caption = 'Compiletime options:'
+      ChildSizing.ControlsPerLine = 1
+      ClientHeight = 46
+      ClientWidth = 321
+      TabOrder = 6
+      object ScanHtmlCheck: TCheckBox
+        AnchorSideLeft.Control = CompileTimeOptionsGroupbox
+        AnchorSideTop.Control = CompileTimeOptionsGroupbox
+        Left = 8
+        Height = 19
+        Top = 0
+        Width = 305
+        BorderSpacing.Left = 8
+        BorderSpacing.Right = 8
+        Caption = 'Parse *.htm* files to include '#10'linked pages and images'
+        TabOrder = 0
+        OnClick = ScanHtmlCheckClick
+      end
+      object CreateSearchableCHMCheck: TCheckBox
+        AnchorSideTop.Control = ScanHtmlCheck
+        AnchorSideTop.Side = asrBottom
+        Left = 8
+        Height = 19
+        Hint = 'Only indexes files added to the project'#10'not files automatically added.'
+        Top = 19
+        Width = 147
+        BorderSpacing.Left = 8
+        BorderSpacing.Bottom = 8
+        Caption = 'Create a searchable chm'
+        ParentShowHint = False
+        ShowHint = True
+        TabOrder = 1
+      end
+    end
+  end
+  object Splitter: TSplitter
+    Left = 240
+    Height = 424
+    Top = 0
+    Width = 5
+    ResizeStyle = rsPattern
   end
   object OpenDialog1: TOpenDialog
-    Filter = 'Help File Project(*.hfp)|*.hfp'
-    FilterIndex = 0
+    Filter = 'Help File Project (*.hfp)|*.hfp'
     Options = [ofFileMustExist, ofEnableSizing, ofViewDetail]
-    Left = 13
-    Top = 25
+    Left = 72
+    Top = 56
   end
   object SaveDialog1: TSaveDialog
-    Filter = 'Help File Project(*.hfp)|*.hfp'
+    Filter = 'Help File Project (*.hfp)|*.hfp'
     FilterIndex = 0
-    Left = 50
-    Top = 25
+    Left = 72
+    Top = 120
   end
   object MainMenu1: TMainMenu
-    Left = 94
-    Top = 25
+    Left = 160
+    Top = 56
     object MenuItem1: TMenuItem
       Caption = 'Project'
       object ProjNewItem: TMenuItem
@@ -385,9 +513,11 @@ object CHMForm: TCHMForm
       Caption = 'Compile'
       object CompileProjItem: TMenuItem
         Caption = 'Compile Project'
+        OnClick = CompileBtnClick
       end
       object CompileOpenBttn: TMenuItem
         Caption = 'Compile and Open chm'
+        OnClick = CompileViewBtnClick
       end
     end
     object MenuItem3: TMenuItem
@@ -406,7 +536,7 @@ object CHMForm: TCHMForm
   object OpenDialog2: TOpenDialog
     FilterIndex = 0
     Options = [ofAllowMultiSelect, ofEnableSizing, ofViewDetail]
-    Left = 15
-    Top = 380
+    Left = 72
+    Top = 192
   end
 end
