--- a/tools/chmmaker/chmsitemapeditor.lfm
+++ b/tools/chmmaker/chmsitemapeditor.lfm
@@ -1,84 +1,41 @@
 object SitemapEditForm: TSitemapEditForm
-  Left = 298
-  Height = 651
-  Top = 87
-  Width = 773
+  Left = 310
+  Height = 458
+  Top = 121
+  Width = 541
   ActiveControl = SitemapTree
   Caption = 'Sitemap Editor'
-  ClientHeight = 651
-  ClientWidth = 773
+  ClientHeight = 458
+  ClientWidth = 541
+  Position = poMainFormCenter
   ShowInTaskBar = stAlways
   LCLVersion = '4.99.0.0'
-  object Label3: TLabel
-    Left = 424
-    Height = 15
-    Top = 16
-    Width = 90
-    Caption = 'Global Properties'
-  end
-  object Label4: TLabel
-    Left = 444
-    Height = 15
-    Top = 136
-    Width = 94
-    Caption = 'Foreground Color'
-  end
-  object Label5: TLabel
-    Left = 444
-    Height = 15
-    Top = 176
-    Width = 96
-    Caption = 'Background Color'
-  end
-  object ForegroundClrBtn: TColorButton
-    Left = 600
-    Height = 25
-    Top = 131
-    Width = 75
-    BorderWidth = 2
-    ButtonColorSize = 16
-    ButtonColor = clBlack
-  end
-  object BackgroundClrBtn: TColorButton
-    Left = 600
-    Height = 25
-    Top = 171
-    Width = 75
-    BorderWidth = 2
-    ButtonColorSize = 16
-    ButtonColor = clNone
-  end
+  OnActivate = FormActivate
   object GroupBox1: TGroupBox
-    Left = 0
-    Height = 651
-    Top = 0
-    Width = 404
-    Align = alLeft
+    Left = 6
+    Height = 446
+    Top = 6
+    Width = 311
+    Align = alRight
+    Anchors = [akLeft, akBottom]
+    BorderSpacing.Around = 6
     Caption = 'Sitemap Tree/List'
-    ClientHeight = 631
-    ClientWidth = 400
+    ClientHeight = 426
+    ClientWidth = 307
     TabOrder = 0
-    object Label1: TLabel
-      Left = 11
-      Height = 15
-      Top = 467
-      Width = 98
-      Caption = 'Local link (in chm)'
-      Enabled = False
-    end
-    object Label2: TLabel
-      Left = 11
-      Height = 15
-      Top = 575
-      Width = 49
-      Caption = 'Add Item'
-    end
     object SitemapTree: TTreeView
-      Left = 0
-      Height = 405
-      Top = 0
-      Width = 400
+      AnchorSideLeft.Control = GroupBox1
+      AnchorSideTop.Control = GroupBox1
+      AnchorSideRight.Control = GroupBox1
+      AnchorSideBottom.Control = Panel2
+      Left = 6
+      Height = 188
+      Top = 6
+      Width = 295
       Align = alTop
+      Anchors = [akTop, akLeft, akRight, akBottom]
+      BorderSpacing.Around = 6
+      Constraints.MinHeight = 60
       HideSelection = False
       ReadOnly = True
       TabOrder = 0
@@ -86,133 +43,393 @@ object SitemapEditForm: TSitemapEditForm
       OnCustomCreateItem = SitemapTreeCustomCreateItem
       OnSelectionChanged = SitemapTreeSelectionChanged
     end
-    object DescriptionEdit: TLabeledEdit
-      Left = 11
-      Height = 23
-      Top = 435
-      Width = 292
-      EditLabel.Height = 15
-      EditLabel.Width = 292
-      EditLabel.Caption = 'Description'
-      Enabled = False
+    object Panel2: TPanel
+      AnchorSideLeft.Control = GroupBox1
+      AnchorSideRight.Control = GroupBox1
+      AnchorSideRight.Side = asrBottom
+      AnchorSideBottom.Control = Panel3
+      Left = 6
+      Height = 150
+      Top = 200
+      Width = 295
+      Anchors = [akLeft, akRight, akBottom]
+      BorderSpacing.Around = 6
+      BevelOuter = bvNone
+      ClientHeight = 150
+      ClientWidth = 295
       TabOrder = 1
-      OnChange = DescriptionEditChange
+      object DescFromTitleBtn: TButton
+        AnchorSideTop.Control = DescriptionEdit
+        AnchorSideTop.Side = asrCenter
+        AnchorSideRight.Control = Panel2
+        AnchorSideRight.Side = asrBottom
+        Left = 220
+        Height = 25
+        Top = 18
+        Width = 75
+        Anchors = [akTop, akRight]
+        BorderSpacing.InnerBorder = 4
+        Caption = 'From Title'
+        Enabled = False
+        TabOrder = 1
+        OnClick = DescFromTitleBtnClick
+      end
+      object LocalCombo: TComboBox
+        AnchorSideLeft.Control = Panel2
+        AnchorSideTop.Control = LocalLinkLabel
+        AnchorSideTop.Side = asrBottom
+        AnchorSideRight.Control = Panel2
+        AnchorSideRight.Side = asrBottom
+        Left = 0
+        Height = 23
+        Top = 73
+        Width = 295
+        Anchors = [akTop, akLeft, akRight]
+        BorderSpacing.Top = 4
+        Enabled = False
+        ItemHeight = 15
+        TabOrder = 2
+        OnChange = LocalComboChange
+        OnKeyUp = LocalComboKeyUp
+      end
+      object LocalLinkLabel: TLabel
+        AnchorSideLeft.Control = Panel2
+        AnchorSideTop.Control = DescriptionEdit
+        AnchorSideTop.Side = asrBottom
+        Left = 0
+        Height = 15
+        Top = 54
+        Width = 98
+        BorderSpacing.Top = 12
+        Caption = 'Local link (in chm)'
+        Enabled = False
+      end
+      object DescriptionLabel: TLabel
+        AnchorSideLeft.Control = Panel2
+        AnchorSideTop.Control = Panel2
+        Left = 0
+        Height = 15
+        Top = 0
+        Width = 60
+        Caption = 'Description'
+        Enabled = False
+      end
+      object DescriptionEdit: TEdit
+        AnchorSideLeft.Control = Panel2
+        AnchorSideTop.Control = DescriptionLabel
+        AnchorSideTop.Side = asrBottom
+        AnchorSideRight.Control = DescFromTitleBtn
+        Left = 0
+        Height = 23
+        Top = 19
+        Width = 212
+        Anchors = [akTop, akLeft, akRight]
+        BorderSpacing.Top = 4
+        BorderSpacing.Right = 8
+        Enabled = False
+        TabOrder = 0
+        OnChange = DescriptionEditChange
+      end
+      object URLLabel: TLabel
+        AnchorSideLeft.Control = Panel2
+        AnchorSideTop.Control = LocalCombo
+        AnchorSideTop.Side = asrBottom
+        Left = 0
+        Height = 15
+        Top = 108
+        Width = 54
+        BorderSpacing.Top = 12
+        Caption = 'URL (http)'
+        Enabled = False
+      end
+      object URLEdit: TEdit
+        AnchorSideLeft.Control = Panel2
+        AnchorSideTop.Control = URLLabel
+        AnchorSideTop.Side = asrBottom
+        AnchorSideRight.Control = Panel2
+        AnchorSideRight.Side = asrBottom
+        Left = 0
+        Height = 23
+        Top = 127
+        Width = 295
+        Anchors = [akTop, akLeft, akRight]
+        BorderSpacing.Top = 4
+        Enabled = False
+        TabOrder = 3
+        OnChange = URLEditChange
+      end
     end
-    object DescFromTitleBtn: TButton
-      Left = 311
-      Height = 25
-      Top = 435
-      Width = 75
-      BorderSpacing.InnerBorder = 4
-      Caption = 'From Title'
-      Enabled = False
+    object Panel3: TPanel
+      AnchorSideLeft.Control = GroupBox1
+      AnchorSideLeft.Side = asrCenter
+      AnchorSideBottom.Control = GroupBox1
+      AnchorSideBottom.Side = asrBottom
+      Left = 35
+      Height = 56
+      Top = 362
+      Width = 236
+      Anchors = [akLeft, akBottom]
+      AutoSize = True
+      BorderSpacing.Left = 6
+      BorderSpacing.Top = 12
+      BorderSpacing.Right = 6
+      BorderSpacing.Bottom = 8
+      BevelOuter = bvNone
+      ClientHeight = 56
+      ClientWidth = 236
       TabOrder = 2
-      OnClick = DescFromTitleBtnClick
-    end
-    object LocalCombo: TComboBox
-      Left = 11
-      Height = 23
-      Top = 487
-      Width = 375
-      Enabled = False
-      ItemHeight = 15
-      TabOrder = 3
-      OnChange = LocalComboChange
-      OnKeyUp = LocalComboKeyUp
-    end
-    object URLEdit: TLabeledEdit
-      Left = 11
-      Height = 23
-      Top = 539
-      Width = 375
-      EditLabel.Height = 15
-      EditLabel.Width = 375
-      EditLabel.Caption = 'URL (http)'
-      Enabled = False
-      TabOrder = 4
-      OnChange = URLEditChange
-    end
-    object BeforeBtn: TButton
-      Left = 90
-      Height = 25
-      Top = 571
-      Width = 75
-      BorderSpacing.InnerBorder = 4
-      Caption = 'Before'
-      Enabled = False
-      TabOrder = 5
-      OnClick = BeforeBtnClick
-    end
-    object AfterBtn: TButton
-      Left = 170
-      Height = 25
-      Top = 571
-      Width = 75
-      BorderSpacing.InnerBorder = 4
-      Caption = 'After'
-      TabOrder = 6
-      OnClick = AfterBtnClick
-    end
-    object SubItemBtn: TButton
-      Left = 90
-      Height = 25
-      Top = 601
-      Width = 155
-      BorderSpacing.InnerBorder = 4
-      Caption = 'Subitem'
-      Enabled = False
-      TabOrder = 7
-      OnClick = SubItemBtnClick
-    end
-    object DeleteBtn: TButton
-      Left = 11
-      Height = 25
-      Top = 601
-      Width = 75
-      BorderSpacing.InnerBorder = 4
-      Caption = 'Delete'
-      TabOrder = 8
-      OnClick = DeleteBtnClick
+      object Label2: TLabel
+        AnchorSideLeft.Control = DeleteBtn
+        AnchorSideLeft.Side = asrCenter
+        AnchorSideTop.Control = BeforeBtn
+        AnchorSideTop.Side = asrCenter
+        AnchorSideRight.Side = asrBottom
+        Left = 13
+        Height = 15
+        Top = 5
+        Width = 49
+        Caption = 'Add Item'
+      end
+      object BeforeBtn: TButton
+        AnchorSideLeft.Control = DeleteBtn
+        AnchorSideLeft.Side = asrBottom
+        AnchorSideRight.Control = Bevel1
+        Left = 81
+        Height = 25
+        Top = 0
+        Width = 75
+        Anchors = [akTop, akLeft, akRight]
+        AutoSize = True
+        BorderSpacing.Left = 6
+        Caption = 'Before'
+        Constraints.MinWidth = 75
+        Enabled = False
+        TabOrder = 0
+        OnClick = BeforeBtnClick
+      end
+      object AfterBtn: TButton
+        AnchorSideLeft.Control = Bevel1
+        AnchorSideLeft.Side = asrBottom
+        AnchorSideRight.Control = SubItemBtn
+        AnchorSideRight.Side = asrBottom
+        Left = 161
+        Height = 25
+        Top = 0
+        Width = 75
+        Anchors = [akTop, akLeft, akRight]
+        AutoSize = True
+        Caption = 'After'
+        Constraints.MinWidth = 75
+        TabOrder = 1
+        OnClick = AfterBtnClick
+      end
+      object SubItemBtn: TButton
+        AnchorSideLeft.Control = DeleteBtn
+        AnchorSideLeft.Side = asrBottom
+        AnchorSideTop.Control = BeforeBtn
+        AnchorSideTop.Side = asrBottom
+        AnchorSideBottom.Control = DeleteBtn
+        AnchorSideBottom.Side = asrBottom
+        Left = 81
+        Height = 25
+        Top = 31
+        Width = 155
+        Anchors = [akTop, akLeft, akBottom]
+        BorderSpacing.Left = 6
+        BorderSpacing.Top = 6
+        Caption = 'Subitem'
+        Enabled = False
+        TabOrder = 3
+        OnClick = SubItemBtnClick
+      end
+      object DeleteBtn: TButton
+        AnchorSideLeft.Control = Panel3
+        AnchorSideTop.Control = BeforeBtn
+        AnchorSideTop.Side = asrBottom
+        Left = 0
+        Height = 25
+        Top = 31
+        Width = 75
+        AutoSize = True
+        BorderSpacing.Top = 6
+        Caption = 'Delete'
+        Constraints.MinWidth = 75
+        TabOrder = 2
+        OnClick = DeleteBtnClick
+      end
+      object Bevel1: TBevel
+        AnchorSideLeft.Control = SubItemBtn
+        AnchorSideLeft.Side = asrCenter
+        Left = 155
+        Height = 24
+        Top = 3
+        Width = 6
+        Shape = bsSpacer
+      end
     end
   end
-  object FontEdit: TLabeledEdit
-    Left = 444
-    Height = 23
-    Top = 72
-    Width = 232
-    EditLabel.Height = 15
-    EditLabel.Width = 232
-    EditLabel.Caption = 'Font'
+  object Panel1: TPanel
+    Left = 329
+    Height = 446
+    Top = 6
+    Width = 206
+    Align = alRight
+    AutoSize = True
+    BorderSpacing.Left = 12
+    BorderSpacing.Top = 6
+    BorderSpacing.Right = 6
+    BorderSpacing.Bottom = 6
+    BevelOuter = bvNone
+    ClientHeight = 446
+    ClientWidth = 206
     TabOrder = 1
-  end
-  object FolderViewCheck: TCheckBox
-    Left = 444
-    Height = 19
-    Top = 212
-    Width = 104
-    Caption = 'Use Folder Icons'
-    TabOrder = 2
-  end
-  object SaveBtn: TButton
-    Left = 560
-    Height = 25
-    Top = 616
-    Width = 75
-    BorderSpacing.InnerBorder = 4
-    Caption = 'Save'
-    ModalResult = 1
-    TabOrder = 3
-    OnClick = SaveBtnClick
-  end
-  object CancelBtn: TButton
-    Left = 652
-    Height = 25
-    Top = 616
-    Width = 75
-    BorderSpacing.InnerBorder = 4
-    Caption = 'Cancel'
-    ModalResult = 2
-    TabOrder = 4
-    OnClick = CancelBtnClick
+    object GlobalPropertiesGroupbox: TGroupBox
+      AnchorSideLeft.Control = Panel1
+      AnchorSideTop.Control = Panel1
+      AnchorSideRight.Control = Panel1
+      AnchorSideRight.Side = asrBottom
+      Left = 0
+      Height = 158
+      Top = 0
+      Width = 206
+      Anchors = [akTop, akLeft, akRight]
+      AutoSize = True
+      Caption = 'Global Properties'
+      ClientHeight = 138
+      ClientWidth = 202
+      TabOrder = 0
+      object FontEdit: TEdit
+        AnchorSideLeft.Control = FontLabel
+        AnchorSideLeft.Side = asrBottom
+        AnchorSideTop.Control = GlobalPropertiesGroupbox
+        AnchorSideRight.Control = ForegroundClrBtn
+        AnchorSideRight.Side = asrBottom
+        Left = 60
+        Height = 23
+        Top = 6
+        Width = 130
+        Anchors = [akTop, akLeft, akRight]
+        BorderSpacing.Left = 24
+        BorderSpacing.Top = 6
+        TabOrder = 0
+      end
+      object FontLabel: TLabel
+        AnchorSideLeft.Control = GlobalPropertiesGroupbox
+        AnchorSideTop.Control = FontEdit
+        AnchorSideTop.Side = asrCenter
+        Left = 12
+        Height = 15
+        Top = 10
+        Width = 24
+        BorderSpacing.Left = 12
+        BorderSpacing.Top = 6
+        Caption = 'Font'
+      end
+      object ForegroundColorLabel: TLabel
+        AnchorSideLeft.Control = FontLabel
+        AnchorSideTop.Control = ForegroundClrBtn
+        AnchorSideTop.Side = asrCenter
+        Left = 12
+        Height = 15
+        Top = 46
+        Width = 94
+        Caption = 'Foreground Color'
+      end
+      object BackgroundColorLabel: TLabel
+        AnchorSideLeft.Control = ForegroundColorLabel
+        AnchorSideTop.Control = BackgroundClrBtn
+        AnchorSideTop.Side = asrCenter
+        Left = 12
+        Height = 15
+        Top = 75
+        Width = 96
+        Caption = 'Background Color'
+      end
+      object ForegroundClrBtn: TColorButton
+        AnchorSideLeft.Control = ForegroundColorLabel
+        AnchorSideLeft.Side = asrBottom
+        AnchorSideTop.Control = FontEdit
+        AnchorSideTop.Side = asrBottom
+        AnchorSideRight.Control = GlobalPropertiesGroupbox
+        AnchorSideRight.Side = asrBottom
+        Left = 130
+        Height = 25
+        Top = 41
+        Width = 60
+        Anchors = [akTop, akLeft, akRight]
+        BorderSpacing.Left = 24
+        BorderSpacing.Top = 12
+        BorderSpacing.Right = 12
+        BorderWidth = 2
+        ButtonColorSize = 16
+        ButtonColor = clBlack
+        Constraints.MinWidth = 60
+      end
+      object BackgroundClrBtn: TColorButton
+        AnchorSideLeft.Control = ForegroundClrBtn
+        AnchorSideTop.Control = ForegroundClrBtn
+        AnchorSideTop.Side = asrBottom
+        AnchorSideRight.Control = ForegroundClrBtn
+        AnchorSideRight.Side = asrBottom
+        Left = 130
+        Height = 25
+        Top = 70
+        Width = 60
+        Anchors = [akTop, akLeft, akRight]
+        BorderSpacing.Top = 4
+        BorderWidth = 2
+        ButtonColorSize = 16
+        ButtonColor = clNone
+      end
+      object FolderViewCheck: TCheckBox
+        AnchorSideLeft.Control = BackgroundColorLabel
+        AnchorSideTop.Control = BackgroundClrBtn
+        AnchorSideTop.Side = asrBottom
+        Left = 12
+        Height = 19
+        Top = 107
+        Width = 104
+        BorderSpacing.Top = 12
+        BorderSpacing.Bottom = 12
+        Caption = 'Use Folder Icons'
+        TabOrder = 1
+      end
+    end
+    object SaveBtn: TButton
+      AnchorSideRight.Control = CancelBtn
+      AnchorSideBottom.Control = Panel1
+      AnchorSideBottom.Side = asrBottom
+      Left = 38
+      Height = 33
+      Top = 413
+      Width = 80
+      Anchors = [akRight, akBottom]
+      AutoSize = True
+      BorderSpacing.Right = 8
+      BorderSpacing.InnerBorder = 4
+      Caption = 'Save'
+      Constraints.MinWidth = 80
+      ModalResult = 1
+      TabOrder = 1
+      OnClick = SaveBtnClick
+    end
+    object CancelBtn: TButton
+      AnchorSideRight.Control = GlobalPropertiesGroupbox
+      AnchorSideRight.Side = asrBottom
+      AnchorSideBottom.Control = Panel1
+      AnchorSideBottom.Side = asrBottom
+      Left = 126
+      Height = 33
+      Top = 413
+      Width = 80
+      Anchors = [akRight, akBottom]
+      AutoSize = True
+      BorderSpacing.InnerBorder = 4
+      Caption = 'Cancel'
+      Constraints.MinWidth = 80
+      ModalResult = 2
+      TabOrder = 2
+      OnClick = CancelBtnClick
+    end
   end
 end
